[gd_scene load_steps=11 format=3 uid="uid://xxt0ky2rli02"]

[ext_resource type="Script" uid="uid://b1pit1c0m5qvb" path="res://scripts/Inventory/ItemInfo.gd" id="1_6cwuh"]
[ext_resource type="Texture2D" uid="uid://ttgelhmqn57h" path="res://assets/inventoryBackgroundSprite.png" id="2_5hhqg"]
[ext_resource type="Texture2D" uid="uid://b0ovfif1lo2wd" path="res://assets/healingItemSprite2d.png" id="3_5hhqg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elp5n"]
bg_color = Color(0.164706, 0.176471, 0.196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_xfvoa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bdmwb"]
resource_name = "TransIn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lx5au"]
resource_name = "TransOut"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1l46r"]
_data = {
&"RESET": SubResource("Animation_xfvoa"),
&"TransIn": SubResource("Animation_bdmwb"),
&"TransOut": SubResource("Animation_lx5au")
}

[sub_resource type="Animation" id="Animation_uyh87"]
resource_name = "Idle"
length = 2.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0d4al"]
_data = {
&"Idle": SubResource("Animation_uyh87")
}

[node name="ItemInfo" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6cwuh")

[node name="Panel" type="Panel" parent="."]
offset_left = 424.0
offset_top = 96.0
offset_right = 728.0
offset_bottom = 520.0
theme_override_styles/panel = SubResource("StyleBoxFlat_elp5n")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 416.0
texture = ExtResource("2_5hhqg")
expand_mode = 1
stretch_mode = 6

[node name="Background" type="Panel" parent="Panel"]
z_index = -2
offset_left = -328.0
offset_top = -16.0
offset_right = 632.0
offset_bottom = 464.0

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Panel")
libraries = {
&"": SubResource("AnimationLibrary_1l46r")
}

[node name="Close" type="Button" parent="."]
offset_left = 432.0
offset_top = 464.0
offset_right = 528.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 24
text = "Close"

[node name="Use" type="Button" parent="."]
offset_left = 624.0
offset_top = 464.0
offset_right = 720.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 24
text = "Use"

[node name="Title" type="Label" parent="."]
offset_left = 432.0
offset_top = 128.0
offset_right = 720.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 20
text = "ItemName"
horizontal_alignment = 1

[node name="Des" type="Label" parent="."]
offset_left = 432.0
offset_top = 312.0
offset_right = 720.0
offset_bottom = 464.0
theme_override_font_sizes/font_size = 18
text = "Item description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(576, 232)
scale = Vector2(0.144531, 0.140625)
texture = ExtResource("3_5hhqg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0d4al")
}
autoplay = "Idle"

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Use" to="." method="_on_use_pressed"]
